now sandwalkers page up

--- a/html/projects/video-games/sandwalkers.html
+++ b/html/projects/video-games/sandwalkers.html
@@ -26,7 +26,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-ftwb"></div>
+    <div class="grid grid-sandwalkers"></div>
     <section id="landing-section">
         <h1>Alvina DR</h1>
         <p>2022</p>
@@ -38,23 +38,20 @@
     <section id="ftwb-section" class="div-row">
             <div class="div-column">
                 <h3>Sandwalkers</h3>
-                <p>This game was made in a week-end, followed by two long weeks of debug. A friend of mine had the idea to make our own game jam at home and we made the whole thing in the apartment I had at the time in Bordeaux. It was a beautiful experience, we had fun, sore backs and were giddy with Monster by the end of the first night. I remember trying to make the walking system work for fourteen hours ! At the time I didn't knew that you could use the grid to plan your movement and there was a big conflict between how physics work in Unity and how I had made it all. A good night of sleep later, it was done in one hour. Which I guess is one of the lessons that I got to experience time and time again since then : if you can't do it now, stop for today and try again tomorrow.</p><br>
-                <p>The theme of the jam was "soédiv xuej" which would translate as "emag oediv" in english. Which is litteraly video game backward. So we had a lot of thinking about mirror and beginning and ending. Which left us with Find The Way Back.</p><br>
-                <p>It's a puzzle game where you control two reflection of the same character. When one moves right, the other moves left. The goal of the game is to bring the two characters to the ending slates to complete the level. The game in itself is pretty simple but the levels can be quite complex.</p><br>
-                
-                <img src="../../../img/video-games/FTWB/ftwb-level2.gif" style="width: 100%;"><br>
+                <p>During my internship at TavroxGames I had the occasion to work for a month and a half with GoblinzStudio on the game Sandwalkers. I first created a map editor which would help level designer to build complex levels easily and directly from the game.</p><br>
+                <img src="../../../img/video-games/sandwalkers/sandwalkers-map-editor2.gif" style="width: 100%;"><br>
                 <div class="div-row" style="width: 100%;">
-                    <img src="../../../img/video-games/FTWB/ftwb-level1.gif" style="width: 49%;">
-                    <img src="../../../img/video-games/FTWB/ftwb-transition.gif" style="width: 49%;">
+                    <img src="../../../img/video-games/sandwalkers/sandwalkers-end-fight-menu.gif" style="width: 49%;">
+                    <img src="../../../img/video-games/sandwalkers/sandwalkers-title.png" style="width: 49%;">
                 </div>
-      </div>
-            <div class="div-column" style="width: 60%; margin-left : 10px;">
-                <img src="../../../img/video-games/FTWB/ftwb-menu.png"><br>
-                <p>The background story is one of the pieces of this game I like the most. Earlier I talked about ending and beginning. Well, here we thought back to all those games where you are the hero and need to save the world. And the game always ends when you do. Except, well, appart from the fact it's all fictionnal, this, saving the world, fighting darkness, etc... Would be pretty traumatising to everyone. And it's never talked about, the way these heroes need to go back home when all these is over. So the game is also about that, learning to live after surviving.</p><br>*
-                <p>Although here I was talking about heroes from video games, the same could go for soldiers or people battling to survive in real life. It's a good question that needs to be asked : how do you cope when you finally won ? How do you drop your weapons, how do you sleep again ? I guess it's a game about trauma somehow. But the deeper meaning behind it is what makes it my favorite game I've made.</p><br>
-                <p>Find The Way Back also is the first game that was "bought" from us, since someone made a donation of 2$, which amounted to around 1,39€, money which was wisely spent in pasta.</p><br>
-                <p>If you want to try the game it's available online on your browser or downloadable through the itch.io page just by clicking the button below. Hope you enjoy !</p><br>
-                <a class="btn1" href="https://alvina-dr.itch.io/find-the-way-back" target="_blank">Discover the game</a>
+            </div>
+            <div class="div-column" style="width: 40%; margin-left : 10px;">
+                <img src="../../../img/video-games/sandwalkers/sandwalkers-map-editor1.gif"><br>
+                <p>The map editor allowed the user to create a map with the dimensions they prefered, showing or not the mountains that appear on the sides of the world in game. You could load and save your work, modify each cell's biome, generate the same environment for the whole map, put decorations, places, ennemies, point of interest... This tool made it possible to make a whole map without having to go through Unity's interface.</p><br>
+                <p>Later on, I started working on the game itself. First I helped to integrate a few tooltips, then I was given more difficult missions, such as bug solving and making up the entire end fight menu from a mockup.</p><br>
+
+                <p>It was pretty exciting working on a game like that, with lots of people, a community behind it and I can't wait to see the final game with my own eyes !</p><br>
+                <a class="btn1" href="https://store.steampowered.com/app/1639080/Sandwalkers/?l=french" target="_blank">Discover the game</a>
             </div>
     </section>
 
