ajout de la page thief tales

--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -39,6 +39,7 @@
     <div class="div-row" id="filter-btn-container" style="justify-content: flex-start;">
         <a class="btn1 filter-active-btn" onclick="filterSelection('all')">ALL</a>        
         <a class="btn1" onclick="filterSelection('work')">WORK</a>
+        <a class="btn1" onclick="filterSelection('school')">SCHOOL</a>
         <a class="btn1" onclick="filterSelection('jam')">JAM</a>
     </div><br>
     <section id="video-game-section" class="div-row">
