--- a/html/projects/video-games/sandwalkers.html
+++ b/html/projects/video-games/sandwalkers.html
@@ -51,7 +51,7 @@
                 <p>Later on, I started working on the game itself. First I helped to integrate a few tooltips, then I was given more difficult missions, such as bug solving and making up the entire end fight menu from a mockup.</p><br>
 
                 <p>It was pretty exciting working on a game like that, with lots of people, a community behind it and I can't wait to see the final game with my own eyes !</p><br>
-                <a class="btn1" href="https://store.steampowered.com/app/1639080/Sandwalkers/?l=french" target="_blank">Discover the game</a>
+                <a class="btn1" href="https://store.steampowered.com/app/1639080/Sandwalkers/" target="_blank">Discover the game</a>
             </div>
     </section>
 
