ajout page golden pumpkin

--- a/html/projects/video-games/chloe-au-musee.html
+++ b/html/projects/video-games/chloe-au-musee.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alvina DR - Portfolio | Chloée au musée</title>
+    <title>Alvina DR - Portfolio | Chloé au musée</title>
 
     <link rel="stylesheet" href="../../../css/main.css">
     <link rel="stylesheet" href="../../../css/text.css">
@@ -35,7 +35,7 @@
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
-    <section id="ftwb-section" class="div-row">
+    <section id="vg-section" class="div-row">
             <div class="div-column">
                 <h3>Chloé au musée</h3>
                 <p>During the project "Rêve et Ville" ("Dream and City") at the beginning of year 2022, I had the opportunity to create an interactive experience about the Musée des Beaux-Arts of Bordeaux. We worked in team of five and I specialized in the JS development using Phaser3. It was a completely new tech for me and I learned a lot in little time. Then again, the freeCodeCamp JS formation was pretty useful.</p><br>
