--- a/html/projects/video-games/find-the-way-back.html
+++ b/html/projects/video-games/find-the-way-back.html
@@ -35,7 +35,7 @@
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
-    <section id="ftwb-section" class="div-row">
+    <section id="vg-section" class="div-row">
             <div class="div-column">
                 <h3>Find the way back</h3>
                 <p>This game was made in a week-end, followed by two long weeks of debug. A friend of mine had the idea to make our own game jam at home and we made the whole thing in the apartment I had at the time in Bordeaux. It was a beautiful experience, we had fun, sore backs and were giddy with Monster by the end of the first night. I remember trying to make the walking system work for fourteen hours ! At the time I didn't knew that you could use the grid to plan your movement and there was a big conflict between how physics work in Unity and how I had made it all. A good night of sleep later, it was done in one hour. Which I guess is one of the lessons that I got to experience time and time again since then : if you can't do it now, stop for today and try again tomorrow.</p><br>
