--- a/html/projects/video-games/pokemon-memory.html
+++ b/html/projects/video-games/pokemon-memory.html
@@ -35,7 +35,7 @@
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
-    <section id="ftwb-section" class="div-row">
+    <section id="vg-section" class="div-row">
             <div class="div-column">
                 <h3>Pokemon memory</h3>
                 <p>In November 2021, we had a React workshop during my DHE. As I already had learned a bit of JS thanks to freeCodeCamp, I decided to realise a pokemon memory with my partner.</p><br>
