--- a/html/projects/video-games/protectors-of-pomelo.html
+++ b/html/projects/video-games/protectors-of-pomelo.html
@@ -35,7 +35,7 @@
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
-    <section id="ftwb-section" class="div-row">
+    <section id="vg-section" class="div-row">
             <div class="div-column">
                 <h3>Protectors of pomelo</h3>
                 <p>When I started my internship at TavroxGames I first worked on the prototype of a game named Protectors of pomelo. It's a tower defense game on the theme of Polynesian islands in the Pacific.</p><br>
