--- a/html/projects/video-games/sandwalkers.html
+++ b/html/projects/video-games/sandwalkers.html
@@ -35,7 +35,7 @@
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
-    <section id="ftwb-section" class="div-row">
+    <section id="vg-section" class="div-row">
             <div class="div-column">
                 <h3>Sandwalkers</h3>
                 <p>During my internship at TavroxGames I had the occasion to work for a month and a half with GoblinzStudio on the game Sandwalkers. I first created a map editor which would help level designer to build complex levels easily and directly from the game.</p><br>
