--- a/html/projects/video-games/thief-tales.html
+++ b/html/projects/video-games/thief-tales.html
@@ -35,7 +35,7 @@
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
-    <section id="ftwb-section" class="div-row">
+    <section id="vg-section" class="div-row">
             <div class="div-column">
                 <h3>Thief Tales</h3>
                 <p>The second game jam we made in collaboration with ENSEIRB was at the end of my second year of DHE. It led to the creation of Thief Tales a compilation of mini game packed inside a thief story.</p><br>
