maj website certification section out

--- a/html/contact.html
+++ b/html/contact.html
@@ -34,20 +34,17 @@
             <p>2022</p>
         </div>
         <br>
-        <div class="mail-div">
-            <p id="text-to-copy">alvinadr24@gmail.com</p>
-        </div>
+
     </section>
 
 <!------------------------------------------------------ PROJETS ------------------------------------------------>
-<p id="copied-sign">COPIED</p>
 
     <section id="contact-section" class="div-row">
         <div>
             <p>Hi there, to contact me you can copy the email adress below.</p>
             <p>You can also see all my social media here : </p>
         </div>
-        <div class="div-column">
+        <div class="div-row" style="justify-content: flex-end;">
             <div class="project-window2" href="./html/index/jeu_video.html">
                 <div class="project-window-navbar">
                     <p class="project-card-title" id="project-id">Social media</p>
@@ -57,8 +54,14 @@
                     <a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA" target="_blank"><img src="../img/icons/youtube.svg" class="icon-social-media"/></a>                      
                 </div>
             </div>
+            <div class="mail-div">
+                <p id="text-to-copy">alvinadr24@gmail.com</p>
+
+            </div>
+            <!-- <p id="copied-sign">COPIED</p> -->
+
         </div>
-    </section>
+    </section><br><br><br>
        
     <div class="scroll-text-div">
         <div style="width: 10000000px">
@@ -70,7 +73,7 @@
             </div>
         </div>
 
-    </div>
+    </div><br><br><br>
 
     <!-- FOOTER -->
     <footer>
