--- a/html/projects/3d.html
+++ b/html/projects/3d.html
@@ -82,10 +82,10 @@
         </div>
         <div class="div-row">
             <div class="div-column">
-                <p>A pack of old things in the same scene really. Twinmotion.</p><br>  
+                <p>Spider pov. Twinmotion.</p><br>  
             </div>
             <div class="div-column">
-                <img src="../../img/3d/old.jpg">            
+                <img src="../../img/3d/spider.jpg">            
             </div>
         </div>
         <div class="div-row">
