--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                 <a href="html/about.html#experience-section" class="btn-more">More &#10151;</a>
             </div>
             <br>
-            <div>
+            <!-- <div>
                 <h3>Certification</h3>
                 <p>Over the time I trained myself using different platforms such as freeCodeCamp and CodinGame. Just below are all my certifications.</p>    
                 <a href="html/about.html#certification-section" class="btn-more">More &#10151;</a>
             </div>
-            <br>
+            <br> -->
         </section>
 
         <!-- PROJET SECTION -->
