--- a/html/projects/photomontage.html
+++ b/html/projects/photomontage.html
@@ -103,7 +103,7 @@
         </div>
         <div class="div-row">
             <div class="div-column">
-                <p>Big fan of Doctor Who here. I don't really know if this is Gallifrey or any other planet really. But I think it doesn't really matter in the end ? It's yet another planet that is going to die, a world that is going to collapse. The Doctor (David Tennant) is standing looking at the show, as he did many times before. I think this illustration is also a question : do you ever get used to it ?</p><br>
+                <p>Big fan of Doctor Who here. I don't really know if this is Gallifrey or any other planet. But I think it doesn't really matter in the end ? It's yet another planet that is going to die, a world that is going to collapse. The Doctor (David Tennant) is standing looking at the show, as he did many times before. I think this illustration is also a question : do you ever get used to it ?</p><br>
             </div>
             <div class="div-column">
                 <img src="../../img/photomontage/P4.jpg">
