div-wrap to div-grid rename

--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -43,7 +43,7 @@
         <a class="btn1" onclick="filterSelection('jam')">JAM</a>
     </div><br>
     <section id="video-game-section" class="div-row">
-        <div class="div-wrap" id="video-game-container"></div>
+        <div class="div-grid" id="video-game-container"></div>
     </section>
 
     <!-- FOOTER -->
