--- a/html/projects/photography.html
+++ b/html/projects/photography.html
@@ -25,7 +25,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-photomontage-1"></div>
+    <div class="grid grid-photography"></div>
     <section id="landing-section">
         <h1>Alvina DR</h1>
         <p>2022</p>
@@ -35,99 +35,14 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
 
-    <section id="photomontage-section">
-        <div class="div-row content-line-showcase">
-            <img src="../../img/photomontage/P10.jpg">            
-            <img src="../../img/photomontage/P9.jpg">            
-            <img src="../../img/photomontage/P8.jpg">            
-            <img src="../../img/photomontage/P7.jpg">            
-            <img src="../../img/photomontage/P6.jpg">            
-            <img src="../../img/photomontage/P4.jpg">            
-            <img src="../../img/photomontage/P2.jpg">            
-            <img src="../../img/photomontage/P1.jpg">            
-        </div>
-        <div class="div-row">
-            <div class="div-column">
-                <img src="../../img/">            
-            </div>
-            <div class="div-column">
-                <p>So yeah there's this monster I dreamt about one night. A sort of dark mud floating in the water, grabbing at things and pulling them down to the bottom of a lake. It was alive. And it was hungry.</p><br>
-                <p>Thinking back on it it looks a lot like the Vashta Nerada from the Doctor Who episodes "Silence in the Library" and "Forest of the Dead", except that it is more "physical" and moves in the water. It is sort of viscuous. I had the occasion to explain it's functionement in a text in english class twice.</p><br>
-                <p>I have this story that I imagined (and I'm still trying to write to this day). It's taking place in a labyrinthe, underground. Through it you can cross the globe in mere seconds, but sometimes door closes. People disapear through it and are never found again. There's an illustration I made of a tower underground if you continue to scroll. It's taking place in the same story.</p><br>
-                <p>As always this was made with photoshop.</p>    
-    
-            </div>
-      </div>
-        <div class="div-row">
-            <div class="div-column">
-                <p>I made this piece to explain how photoshop worked to some friends at the start of my DHE. I had lots of fun doing it and myself learned a few things. This one represents an island floating in the sky on the theme of Le Petit Prince by Antoine de Saint-Exupéry. It's a story that my mother red me a lot, me and my brother when we were young and I always liked it. There a few comics about this too that I red and I loved seeing the new planets, the new danger. Now that I think about it, it has lots of similarities with Doctor Who. A traveler, alone but with friends, saving the world.</p><br>
-                <p>Le Petit Prince also represents the loss of childhood. It talks a lot about growing up, being kind, friends, family, love and loneliness. May seem candid but all those subjects are so human, so pure... I hold this story dear. My favorite quotes are fading into the background around the box.</p>
-            </div>
-            <div class="div-column">
-                <img src="../../img/photomontage/P9.jpg">
-            </div>
-        </div>
-        <div class="div-row">
-            <div class="div-column">
-                <img src="../../img/photomontage/P8.jpg">
-            </div>
-            <div class="div-column">
-                <p>I always found this one less finished than the others.</p><br>
-                <p> I have a great family and lots of siblings and this link was always very important to me. There I chose to represent two sisters, one protecting the other from the unknown. It's a story about kids that got lost somewhere magical where reindeer can be gigantic and little girls can have powers.</p><br>
-                <p>And yeah, I guess, as always it's a story about love.</p>
-            </div>
-        </div>
-        <div class="div-row">
-            <div class="div-column">
-                <p>First week of my DipHE, we had to do the cover of a music album. As I was already quite familiar with photoshop and loved doing montages, this was the best surprise ! I was totally in my element and had so much fun making this piece !</p><br>
-                <p>I chose to make an alternative cover to the album "origins" by Imagine Dragons.</p><br>  
-                <div class="div-row">
-                    <img src="../../img/photomontage/origins/origins1.jpg"> 
-                    <img src="../../img/photomontage/origins/origins2.jpg"> 
-                    <img src="../../img/photomontage/origins/origins3.jpg"> 
-                </div><br>
-                <p>You can click on this link to <a class="link-in-text" href="https://youtu.be/JyeG7LvVOWo" target="_blank">see the whole process</a>.</p><br>  
-            </div>
-            <div class="div-column">
-                <img src="../../img/photomontage/P7.jpg">
-            </div>
-        </div>
-        <div class="div-row">
-            <div class="div-column">
-                <img src="../../img/photomontage/P6.jpg">
-            </div>
-            <div class="div-column">
-                <p>It's a ghost city in the caves of the world. People used to live there but now the towers are no longer full of life, just of memories. And soon, even that will die.</p><br>
-                <p>I really like this piece because it's the first that represents a story that has more background. In this case, it's about a labyrinthe, underground, that leads to everywhere and to here.</p>
-            </div>
-        </div>
-        <div class="div-row">
-            <div class="div-column">
-                <p>Big fan of Doctor Who here. I don't really know if this is Gallifrey or any other planet really. But I think it doesn't really matter in the end ? It's yet another planet that is going to die, a world that is going to collapse. The Doctor (David Tennant) is standing looking at the show, as he did many times before. I think this illustration is also a question : do you ever get used to it ?</p><br>
-            </div>
-            <div class="div-column">
-                <img src="../../img/photomontage/P4.jpg">
-            </div>
-        </div>
-        <div class="div-row">
-            <div class="div-column">
-                <img src="../../img/photomontage/P2.jpg">
-            </div>
-            <div class="div-column">
-                <p>This one is starting to get old now. Just a spaceship crashing on a planet. Very few elements but I enjoyed making it a lot at the time.</p><br>
-                <p>You can click on this link to <a class="link-in-text" href="https://youtu.be/XvsrA4PbQlI" target="_blank">see the whole process</a>.</p><br> 
-            </div>
-        </div>
-        <div class="div-row">
-            <div class="div-column">
-                <p>First piece I ever made ! It's still looking better than some I've done since then. Well, practice makes better I guess ? I really like the colors and it's quite peaceful. It's named Angel's Bay.</p><br>
-                <p>You can click on this link to <a class="link-in-text" href="https://youtu.be/Y_rxclOkZ1Y" target="_blank">see the whole process</a>.</p><br> 
-            </div>
-            <div class="div-column">
-                <img src="../../img/photomontage/P1.jpg">
-            </div>
+    <section id="photography-section">
+        <div class="div-row" id="photography-container">
+            <div id="photography-container1" style="display:flex; flex-direction:column"></div>
+            <div id="photography-container2" style="display:flex; flex-direction:column"></div>
+            <div id="photography-container3" style="display:flex; flex-direction:column"></div>
         </div>
     </section>
+    <br>
 
     <!-- FOOTER -->
     <footer>
@@ -135,6 +50,7 @@
         <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
     <script src="../../js/mouse-cursor.js"></script>
+    <script src="../../js/photography-loader.js"></script>
 
 </body>
 </html>
