ajout page chase tag

--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -41,6 +41,7 @@
         <a class="btn1" onclick="filterSelection('work')">WORK</a>
         <a class="btn1" onclick="filterSelection('school')">SCHOOL</a>
         <a class="btn1" onclick="filterSelection('jam')">JAM</a>
+        <a class="btn1" onclick="filterSelection('prototype')">PROTOTYPE</a>
     </div><br>
     <section id="video-game-section" class="div-row">
         <div class="div-grid" id="video-game-container"></div>
