correction text about + copied in contact

--- a/html/about.html
+++ b/html/about.html
@@ -41,13 +41,13 @@
         <section id="about-me-section" class="div-row">
             <div>
                 <h3>About me</h3>
-                <p>Hi there ! I'm a french student, working part time at TavroxGames in Toulouse. I enjoy making video games and programming in general. I'm a Doctor Who fan, a Percy Jackson reader and a Life Is Strange player. Writing stories and learning are two big aspects of my life and I think that both these things can mix in video games and that's something I really want to convey in what I do.</p><br>    
+                <p>Hi there ! I'm a french student, working part time at TavroxGames in Toulouse. I enjoy making video games and programming in general. Big Doctor Who and Percy Jackson fan, I also love playing narrative video games such as Life Is Strange or Detroit Become Human. Writing stories and learning are two big aspects of my life and I think that both these things can mix in video games and that's something I really want to convey in what I do.</p><br>    
                 <p>I started making video games when I was eleven on RPG Maker (pokemon fan games precisely) and it was wonderful. For a while it was a big hobby and everytime I had access to my dad's computer I would try and make maps, put more stuff on my tilesets, animate my characters or try and modify the code (which was ruby) as well as I could. This made me discover Photoshop and it quickly also became a hobby.</p><br>
                 <p>In high school I started using Unity trying to make a pokemon 3D game (which is sort of a fixation by now right ?). This led to me discovering C4D and trying my hand at 3D modeling and so. Later on, when I had to choose what I wanted to do in life and what I would study, I had the sudden revelation that I indeed wanted to make video games. And most of all that it was possible.</p><br>
                 <p>So here I am now, really, really making video games and learning to at school. Oh by the way, my name is Alvina Damasio--Razafiarizaka (Damasio, portuguese, father's side, Razafiarizaka, malagasy, mother's side) and I'm from France, Périgueux, a little city two hours away from Bordeaux. And I still think about making a pokemon game from time to time.</p><br>
             </div>
             <div class="project-window1">
-                <img class="project-window1-image" src="../img/about/profile-pic.jpg" alt="">
+                <img class="project-window1-image" src="../img/about/profile-pic2.jpg" alt="">
                 <div class="project-card-data">
                     <div class="project-card-content">
                         <p id="project-nav-title" class="project-card-title" >Hello</p>
