--- a/html/contact.html
+++ b/html/contact.html
@@ -40,9 +40,8 @@
 <!------------------------------------------------------ PROJETS ------------------------------------------------>
 
     <section id="contact-section" class="div-row">
-        <div>
-            <p>Hi there, to contact me you can copy the email adress below.</p>
-            <p>You can also see all my social media here : </p>
+        <div class="div-row">
+            <p>Hi there, to contact me you can copy the email adress on the right.</p>
         </div>
         <div class="div-row" style="justify-content: flex-end;">
             <div class="project-window2" href="./html/index/jeu_video.html">
@@ -61,7 +60,7 @@
             <!-- <p id="copied-sign">COPIED</p> -->
 
         </div>
-    </section><br><br><br>
+    </section><br><br><br><br><br><br><br>
        
     <div class="scroll-text-div">
         <div style="width: 10000000px">
