--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section id="about-section">
             <div>
                 <h3>About me</h3>
-                <p>Hi there ! I'm a french student, currently in internship at TavroxGames in Toulouse. I enjoy making video games and programming in general. I'm a Doctor Who fan, a Percy Jackson reader and a Life Is Strange player. Writing stories and learning are two big aspects of my life and I think that both these things can mix in video games and that's something I really want to convey in what I do.</p>    
+                <p>Hi there ! I'm a french student, working part time at TavroxGames in Toulouse. I enjoy making video games and programming in general. Big Doctor Who and Percy Jackson fan, I also love playing narrative video games such as Life Is Strange or Detroit Become Human. Writing stories and learning are two big aspects of my life and I think that both these things can mix in video games and that's something I really want to convey in what I do.</p><br>    
                 <a href="html/about.html#about-me-section" class="btn-more">More &#10151;</a>
             </div>
             <br>
