--- a/html/contact.html
+++ b/html/contact.html
@@ -30,7 +30,7 @@
     <div class="grid grid-contact-1"></div>
     <section id="landing-section" class="div-row">
         <div class="div-column">
-            <h1>Alvina DR</h1>
+            <h1>Alvina</h1>
             <p>2022</p>
         </div>
         <br>
