--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -29,7 +29,7 @@
     
     <div class="grid grid-video-game-1"></div>
     <section id="landing-section">
-        <h1>Alvina DR</h1>
+        <h1>Alvina</h1>
         <p>2022</p>
         <br>
     </section>
