--- a/html/about.html
+++ b/html/about.html
@@ -31,7 +31,7 @@
     <div class="grid grid-about-1"></div>
     <!-- <div class="grid grid-about-2"></div> -->
     <section id="landing-section">
-        <h1>Alvina DR</h1>
+        <h1>Alvina</h1>
         <p>2022</p>
         <br>
     </section>
