--- a/html/projects/video-games/thief-tales.html
+++ b/html/projects/video-games/thief-tales.html
@@ -28,7 +28,7 @@
     
     <div class="grid grid-sandwalkers"></div>
     <section id="landing-section">
-        <h1>Alvina DR</h1>
+        <h1>Alvina</h1>
         <p>2022</p>
         <br>
     </section>
