--- a/html/about.html
+++ b/html/about.html
@@ -62,7 +62,7 @@
             <p>I studied in Bordeaux for two years and got my Diploma of Higher Education in Multimedia and Internet. Then I started a Vocational Degree about video games and interactive media in Tarbes, while working in Toulouse. I later entend to continue with a master in video game programming, hopefully at ENJMIN in Angoulême (wink wink).</p><br>    
             <p>Here are my english and french curriculum. Don't worry, no download it opens in a blank page :D</p><br>
             <div class="div-row">
-                <a class="btn1" href="../img/Alvina Damasio--Razafiarizaka - Gameplay Programmer CV.pdf" target="_blank">English curriculum</a><br>
+                <a class="btn1" href="../img/Alvina Damasio--Razafiarizaka - Gameplay programmer CV.pdf" target="_blank">English curriculum</a><br>
                 <a class="btn1" href="../img/Alvina Damasio--Razafiarizaka - Programmeur gameplay CV.pdf" target="_blank">French curriculum</a><br>
             </div>
             <br>
