added animation on index buttons + arrows to navigate left ro right

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="grid grid-header"></div>
     <navbar>
         <ul class="nav-ul">
-            <li class="nav-link"><a href="index.html">Work</a></li>
+            <li class="nav-link"><a href="index.html">Home</a></li>
             <li class="nav-link"><a href="html/about.html">About</a></li>
             <li class="nav-link"><a href="html/contact.html">Contact</a></li>
         </ul>
@@ -50,12 +50,6 @@
                 <a href="html/about.html#experience-section" class="btn-more">More &#10151;</a>
             </div>
             <br>
-            <!-- <div>
-                <h3>Certification</h3>
-                <p>Over the time I trained myself using different platforms such as freeCodeCamp and CodinGame. Just below are all my certifications.</p>    
-                <a href="html/about.html#certification-section" class="btn-more">More &#10151;</a>
-            </div>
-            <br> -->
         </section>
 
         <!-- PROJET SECTION -->
@@ -91,7 +85,11 @@
                         </div>
                         <div class="project-window-content">
                             <h3 id="project-title"></h3>
-                            <p id="project-text"></p>
+                            <p id="project-text"></p><br>
+                        </div>
+                        <div style="position:absolute; bottom: 0; right:0; padding: 5px; display: flex; align-items: flex-end;">
+                            <button id="left-button">◄</button>
+                            <button id="right-button">►</button>
                         </div>
                     </div>
 
