--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -21,7 +21,7 @@
     <div class="grid grid-header"></div>
     <navbar>
         <ul class="nav-ul">
-            <li class="nav-link"><a href="../../index.html">Work</a></li>
+            <li class="nav-link"><a href="../../index.html">Home</a></li>
             <li class="nav-link"><a href="../about.html">About</a></li>
             <li class="nav-link"><a href="../contact.html">Contact</a></li>
         </ul>
