allow teleportation from side to the other side on arrows

--- a/html/about.html
+++ b/html/about.html
@@ -49,7 +49,7 @@
                 <img class="project-window1-image" src="../img/about/profile-pic2.jpg" alt="">
                 <div class="project-card-data">
                     <div class="project-card-content">
-                        <p id="project-nav-title" class="project-card-title" >Hello</p>
+                        <p id="project-nav-title" class="project-card-title" >Hello :)</p>
                     </div>
                 </div>
             </div>
