copy email adress system change

--- a/html/contact.html
+++ b/html/contact.html
@@ -16,6 +16,9 @@
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
+    <div class="mail-div" id="mail-cursor">
+        <p id="text-to-copy">alvinadr24@gmail.com</p>
+    </div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header"></div>
@@ -53,14 +56,17 @@
                     <a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA" target="_blank"><img src="../img/icons/youtube.svg" class="icon-social-media"/></a>                      
                 </div>
             </div>
-            <div class="mail-div">
-                <p id="text-to-copy">alvinadr24@gmail.com</p>
-
+            <div class="project-window1" href="./html/index/jeu_video.html" >
+                <img class="project-window1-image" src="../img/photomontage/P1.jpg" id="mail-zone"/>
+                <p id="tooltip" style="position: absolute; margin: auto; top:50%; width: fit-content; padding: 2px; text-align: center; justify-self: center; font-weight: 700; background-color: transparent; color: transparent; text-transform: uppercase;">Copied</p>
+                <div class="project-card-data">
+                    <div class="project-card-content">
+                        <p id="project-nav-title" class="project-card-title">Hover me</p>
+                    </div>
+                </div>
             </div>
-            <!-- <p id="copied-sign">COPIED</p> -->
-
         </div>
-    </section><br><br><br><br><br><br><br>
+    </section><br>
        
     <div class="scroll-text-div">
         <div style="width: 10000000px">
@@ -79,10 +85,9 @@
         <div class="grid grid-footer"></div>
         <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
-
-    <script src="../js/mouse-cursor.js"></script>
     <script src="../js/copy.js"></script>
     <script src="../js/circle-text.js"></script>
+    <script src="../js/mouse-cursor.js"></script>
 
 </body>
 </html>
