copy mail animation + pokemon majuscule

--- a/html/contact.html
+++ b/html/contact.html
@@ -43,8 +43,8 @@
 <!------------------------------------------------------ PROJETS ------------------------------------------------>
 
     <section id="contact-section" class="div-row">
-        <div class="div-row">
-            <p>Hi there, to contact me you can copy the email adress on the right.</p>
+        <div class="div-row" style="margin-top: 5px;">
+            <p>Hi there, to contact me you can copy my email adress by clicking on the image on the right. I'm always happy to talk :D</p>
         </div>
         <div class="div-row" style="justify-content: flex-end;">
             <div class="project-window2" href="./html/index/jeu_video.html">
@@ -58,15 +58,16 @@
             </div>
             <div class="project-window1" href="./html/index/jeu_video.html" >
                 <img class="project-window1-image" src="../img/photomontage/P1.jpg" id="mail-zone"/>
-                <p id="tooltip" style="position: absolute; margin: auto; top:50%; width: fit-content; padding: 2px; text-align: center; justify-self: center; font-weight: 700; background-color: transparent; color: transparent; text-transform: uppercase;">Copied</p>
                 <div class="project-card-data">
-                    <div class="project-card-content">
-                        <p id="project-nav-title" class="project-card-title">Hover me</p>
+                    <div class="project-card-content" style="display: flex; justify-content: space-between;">
+                        <p id="project-nav-title" class="project-card-title">Click me</p>
+                        <p id="tooltip" class="project-card-title" style="width: fit-content; justify-self: flex-end; background-color: transparent; color: transparent; text-transform: uppercase; padding: 0 3px;">Copied</p>
+
                     </div>
                 </div>
             </div>
         </div>
-    </section><br>
+    </section><br><br><br><br><br>
        
     <div class="scroll-text-div">
         <div style="width: 10000000px">
@@ -77,8 +78,7 @@
                 <h5>&nbsp;GAMEPLAY PROGRAMMING . LEVEL DESIGN . PHOTOMONTAGE . PHOTOGRAPHY . WEB DEVELOPMENT . STORYTELLING .</h5>
             </div>
         </div>
-
-    </div><br><br><br>
+    </div>
 
     <!-- FOOTER -->
     <footer>
